// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CommunicatorDialogButtons tests default renderer 1`] = `
<div
  className="CommunicatorDialogButtons__container"
>
  <div
    className="CommunicatorDialogButtons__searchButton"
  >
    <IconButton
      id="communicator-dialog-buttons-search-button"
      label="cboard.components.CommunicatorDialog.search"
    >
      <UNDEFINED />
    </IconButton>
  </div>
  <div
    className="CommunicatorDialogButtons__menu"
  >
    <IconButton
      id="communicator-dialog-buttons-menu-button"
      label="cboard.components.CommunicatorDialog.menu"
      onClick={[Function]}
    >
      <UNDEFINED />
    </IconButton>
    <ForwardRef(WithStyles)
      anchorEl={null}
      id="communicator-dialog-buttons-menu"
      onClose={[Function]}
      open={false}
    >
      <ForwardRef(WithStyles)>
        <a
          href="https://www.cboard.io/help/"
          rel="noopener noreferrer"
          target="_blank"
        >
          <FormattedMessage
            values={Object {}}
          />
        </a>
      </ForwardRef(WithStyles)>
      <ForwardRef(WithStyles)>
        <a
          href="https://www.cboard.io/terms-of-use/"
          rel="noopener noreferrer"
          target="_blank"
        >
          <FormattedMessage
            values={Object {}}
          />
        </a>
      </ForwardRef(WithStyles)>
    </ForwardRef(WithStyles)>
  </div>
</div>
`;

exports[`CommunicatorDialogButtons tests menu behavior 1`] = `
<div
  className="CommunicatorDialogButtons__container"
>
  <div
    className="CommunicatorDialogButtons__searchButton"
  >
    <IconButton
      id="communicator-dialog-buttons-search-button"
      label="cboard.components.CommunicatorDialog.search"
    >
      <SearchIcon />
    </IconButton>
  </div>
  <div
    className="CommunicatorDialogButtons__menu"
  >
    <IconButton
      id="communicator-dialog-buttons-menu-button"
      label="cboard.components.CommunicatorDialog.menu"
      onClick={[Function]}
    >
      <MoreVertIcon />
    </IconButton>
    <WithStyles(ForwardRef(Menu))
      anchorEl={null}
      id="communicator-dialog-buttons-menu"
      onClose={[Function]}
      open={false}
    >
      <WithStyles(ForwardRef(MenuItem))>
        <a
          href="https://www.cboard.io/help/"
          rel="noopener noreferrer"
          target="_blank"
        >
          <FormattedMessage
            values={Object {}}
          />
        </a>
      </WithStyles(ForwardRef(MenuItem))>
      <WithStyles(ForwardRef(MenuItem))>
        <a
          href="https://www.cboard.io/terms-of-use/"
          rel="noopener noreferrer"
          target="_blank"
        >
          <FormattedMessage
            values={Object {}}
          />
        </a>
      </WithStyles(ForwardRef(MenuItem))>
    </WithStyles(ForwardRef(Menu))>
  </div>
</div>
`;

exports[`CommunicatorDialogButtons tests menu behavior 2`] = `
<div
  className="CommunicatorDialogButtons__container"
>
  <div
    className="CommunicatorDialogButtons__searchButton"
  >
    <IconButton
      id="communicator-dialog-buttons-search-button"
      label="cboard.components.CommunicatorDialog.search"
    >
      <SearchIcon />
    </IconButton>
  </div>
  <div
    className="CommunicatorDialogButtons__menu"
  >
    <IconButton
      id="communicator-dialog-buttons-menu-button"
      label="cboard.components.CommunicatorDialog.menu"
      onClick={[Function]}
    >
      <MoreVertIcon />
    </IconButton>
    <WithStyles(ForwardRef(Menu))
      anchorEl="someElement"
      id="communicator-dialog-buttons-menu"
      onClose={[Function]}
      open={true}
    >
      <WithStyles(ForwardRef(MenuItem))>
        <a
          href="https://www.cboard.io/help/"
          rel="noopener noreferrer"
          target="_blank"
        >
          <FormattedMessage
            values={Object {}}
          />
        </a>
      </WithStyles(ForwardRef(MenuItem))>
      <WithStyles(ForwardRef(MenuItem))>
        <a
          href="https://www.cboard.io/terms-of-use/"
          rel="noopener noreferrer"
          target="_blank"
        >
          <FormattedMessage
            values={Object {}}
          />
        </a>
      </WithStyles(ForwardRef(MenuItem))>
    </WithStyles(ForwardRef(Menu))>
  </div>
</div>
`;
